[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/UI/pkmnfl.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Pokemon/Squirtle.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Pokemon Party/party_background.png" type="Texture" id=3]
[ext_resource path="res://FirstPokemonSlot.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/UI/Pokemon Party/gender_icons.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Pokemon Party/healthbar.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/Pokemon Party/standby_pokemon_background.png" type="Texture" id=8]
[ext_resource path="res://Assets/Pokemon/Bulbasaur.png" type="Texture" id=9]
[ext_resource path="res://Assets/Pokemon/Pidgey.png" type="Texture" id=10]
[ext_resource path="res://Assets/Pokemon/Pikachu.png" type="Texture" id=11]
[ext_resource path="res://Assets/Pokemon/Onix.png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/Pokemon Party/exit_background_button.png" type="Texture" id=13]
[ext_resource path="res://world/PokemonPartyScreen.gd" type="Script" id=14]
[ext_resource path="res://world/set_pokemon_party.gd" type="Script" id=15]

[sub_resource type="Animation" id=3]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PokemonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PokemonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PokemonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PokemonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PokemonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="PokemonPartyScreen" type="Node2D"]
script = ExtResource( 14 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FirstPokemonSlot" parent="." instance=ExtResource( 4 )]

[node name="SecondPokemonSlot" type="Node2D" parent="."]
position = Vector2( 119, -26 )
script = ExtResource( 15 )
menu_number = 1

[node name="Background" type="Sprite" parent="SecondPokemonSlot"]
position = Vector2( 44, 47 )
texture = ExtResource( 8 )
hframes = 2

[node name="PokemonPartySprite" type="Sprite" parent="SecondPokemonSlot"]
position = Vector2( -16, 48 )
texture = ExtResource( 9 )
hframes = 2
region_enabled = true
region_rect = Rect2( 30, 9, 70, 24 )

[node name="PokemonName" type="Sprite" parent="SecondPokemonSlot"]
position = Vector2( 35, 44 )
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 0, -1, 73, 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="SecondPokemonSlot"]
autoplay = "Idle"
anims/Idle = SubResource( 3 )

[node name="LevelLabel" type="Label" parent="SecondPokemonSlot"]
margin_left = 17.0
margin_top = 51.0
margin_right = 57.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="SecondPokemonSlot"]
margin_left = 82.0
margin_top = 51.0
margin_right = 122.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "23"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxHealthLabel" type="Label" parent="SecondPokemonSlot"]
margin_left = 100.0
margin_top = 51.0
margin_right = 140.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenderIcon" type="Sprite" parent="SecondPokemonSlot"]
position = Vector2( 44, 54 )
texture = ExtResource( 6 )
hframes = 2

[node name="HealthBar" type="Sprite" parent="SecondPokemonSlot"]
position = Vector2( 89, 46 )
scale = Vector2( 2, 1 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 24, 0, 24, 3 )

[node name="ThirdPokemonSlot" type="Node2D" parent="."]
position = Vector2( 119, -2 )
script = ExtResource( 15 )
menu_number = 2

[node name="Background" type="Sprite" parent="ThirdPokemonSlot"]
position = Vector2( 44, 47 )
texture = ExtResource( 8 )
hframes = 2

[node name="PokemonPartySprite" type="Sprite" parent="ThirdPokemonSlot"]
position = Vector2( -16, 48 )
texture = ExtResource( 2 )
hframes = 2
region_enabled = true
region_rect = Rect2( 30, 9, 70, 24 )

[node name="PokemonName" type="Sprite" parent="ThirdPokemonSlot"]
position = Vector2( 35, 44 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, -1, 73, 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ThirdPokemonSlot"]
autoplay = "Idle"
anims/Idle = SubResource( 4 )

[node name="LevelLabel" type="Label" parent="ThirdPokemonSlot"]
margin_left = 17.0
margin_top = 51.0
margin_right = 57.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="ThirdPokemonSlot"]
margin_left = 82.0
margin_top = 51.0
margin_right = 122.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "23"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxHealthLabel" type="Label" parent="ThirdPokemonSlot"]
margin_left = 100.0
margin_top = 51.0
margin_right = 140.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenderIcon" type="Sprite" parent="ThirdPokemonSlot"]
position = Vector2( 44, 54 )
texture = ExtResource( 6 )
hframes = 2

[node name="HealthBar" type="Sprite" parent="ThirdPokemonSlot"]
position = Vector2( 89, 46 )
scale = Vector2( 2, 1 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 24, 0, 24, 3 )

[node name="FourthPokemonSlot" type="Node2D" parent="."]
position = Vector2( 119, 22 )
script = ExtResource( 15 )
menu_number = 3

[node name="Background" type="Sprite" parent="FourthPokemonSlot"]
position = Vector2( 44, 47 )
texture = ExtResource( 8 )
hframes = 2

[node name="PokemonPartySprite" type="Sprite" parent="FourthPokemonSlot"]
position = Vector2( -16, 48 )
texture = ExtResource( 10 )
hframes = 2
region_enabled = true
region_rect = Rect2( 30, 9, 70, 24 )

[node name="PokemonName" type="Sprite" parent="FourthPokemonSlot"]
position = Vector2( 35, 44 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 0, -1, 73, 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FourthPokemonSlot"]
autoplay = "Idle"
anims/Idle = SubResource( 5 )

[node name="LevelLabel" type="Label" parent="FourthPokemonSlot"]
margin_left = 17.0
margin_top = 51.0
margin_right = 57.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="FourthPokemonSlot"]
margin_left = 82.0
margin_top = 51.0
margin_right = 122.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "23"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxHealthLabel" type="Label" parent="FourthPokemonSlot"]
margin_left = 100.0
margin_top = 51.0
margin_right = 140.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenderIcon" type="Sprite" parent="FourthPokemonSlot"]
position = Vector2( 44, 54 )
texture = ExtResource( 6 )
hframes = 2

[node name="HealthBar" type="Sprite" parent="FourthPokemonSlot"]
position = Vector2( 89, 46 )
scale = Vector2( 2, 1 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 24, 0, 24, 3 )

[node name="FifthPokemonSlot" type="Node2D" parent="."]
position = Vector2( 119, 46 )
script = ExtResource( 15 )
menu_number = 4

[node name="Background" type="Sprite" parent="FifthPokemonSlot"]
position = Vector2( 44, 47 )
texture = ExtResource( 8 )
hframes = 2

[node name="PokemonPartySprite" type="Sprite" parent="FifthPokemonSlot"]
position = Vector2( -16, 48 )
texture = ExtResource( 11 )
hframes = 2
region_enabled = true
region_rect = Rect2( 30, 9, 70, 24 )

[node name="PokemonName" type="Sprite" parent="FifthPokemonSlot"]
position = Vector2( 35, 44 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 0, -1, 73, 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FifthPokemonSlot"]
autoplay = "Idle"
anims/Idle = SubResource( 6 )

[node name="LevelLabel" type="Label" parent="FifthPokemonSlot"]
margin_left = 17.0
margin_top = 51.0
margin_right = 57.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="FifthPokemonSlot"]
margin_left = 82.0
margin_top = 51.0
margin_right = 122.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "23"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxHealthLabel" type="Label" parent="FifthPokemonSlot"]
margin_left = 100.0
margin_top = 51.0
margin_right = 140.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenderIcon" type="Sprite" parent="FifthPokemonSlot"]
position = Vector2( 44, 54 )
texture = ExtResource( 6 )
hframes = 2

[node name="HealthBar" type="Sprite" parent="FifthPokemonSlot"]
position = Vector2( 89, 46 )
scale = Vector2( 2, 1 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 24, 0, 24, 3 )

[node name="SixthPokemonSlot" type="Node2D" parent="."]
position = Vector2( 119, 70 )
script = ExtResource( 15 )
menu_number = 5

[node name="Background" type="Sprite" parent="SixthPokemonSlot"]
position = Vector2( 44, 47 )
texture = ExtResource( 8 )
hframes = 2

[node name="PokemonPartySprite" type="Sprite" parent="SixthPokemonSlot"]
position = Vector2( -16, 48 )
texture = ExtResource( 12 )
hframes = 2
region_enabled = true
region_rect = Rect2( 30, 9, 70, 24 )

[node name="PokemonName" type="Sprite" parent="SixthPokemonSlot"]
position = Vector2( 35, 44 )
texture = ExtResource( 12 )
region_enabled = true
region_rect = Rect2( 0, -1, 73, 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="SixthPokemonSlot"]
autoplay = "Idle"
anims/Idle = SubResource( 7 )

[node name="LevelLabel" type="Label" parent="SixthPokemonSlot"]
margin_left = 17.0
margin_top = 51.0
margin_right = 57.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="SixthPokemonSlot"]
margin_left = 82.0
margin_top = 51.0
margin_right = 122.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "23"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxHealthLabel" type="Label" parent="SixthPokemonSlot"]
margin_left = 100.0
margin_top = 51.0
margin_right = 140.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenderIcon" type="Sprite" parent="SixthPokemonSlot"]
position = Vector2( 44, 54 )
texture = ExtResource( 6 )
hframes = 2

[node name="HealthBar" type="Sprite" parent="SixthPokemonSlot"]
position = Vector2( 89, 46 )
scale = Vector2( 2, 1 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 24, 0, 24, 3 )

[node name="CancelSprite" type="Sprite" parent="."]
position = Vector2( 211, 144 )
texture = ExtResource( 13 )
hframes = 2

[editable path="FirstPokemonSlot"]
